# sailing_simulator

./: README.md  pyproject.toml
sailing_simulator/: __init__.py  game.py  levels.py  physics.py
tests/: test_game_helpers.py  test_levels.py  test_physics.py
